@@ -1,5 +1,6 @@
 ncmpc 0.43 - not yet released
 * playlist editor
+* file page: handle mouse double clicks
 
 ncmpc 0.42 - (2020-10-28)
 * file page: repaint after moving cursor with mouse
